--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,42 @@
 
 
 body {
-  background: var(--bg-primary);
+  background: var(--bg-second);
   color: var(--font-primary);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #home header {
   margin: 1rem 0 2rem 0;
+  display: flex;
+  justify-content: space-between;
 }
+#home header #IconTranslate {
+  padding: 0.3rem;
+  color: var(--font-second);
+  transition: ease 0.2s;
+  border-radius: 0.4rem;
+  display: flex;
+}
+#home header #IconTranslate:hover {
+  background: #4184e426;
+  color: var(--link-primary);
+}
+#home header #translate-options {
+  display:flex;
+  flex-direction:column;
+  font-size:1rem;
+  transition: ease 0.2s;
+}
+#home header #translate-options span {
+  padding:0.4rem 1rem;
+  border-radius: 0.2rem;
+}
+#home header #translate-options span:hover {
+  background: #4184e426;
+
+}
+
 
 #home .container {
   display: grid;
@@ -38,4 +66,22 @@ bg {
   background-color: var(--bg-4);
   border-radius: 0.4rem;
   padding: 0.1rem 0.2rem;
+}
+
+
+
+
+/*RESPONSIVE*/
+
+@media (max-width: 420px) {
+  #params-table  {
+    width: calc(100vw - 4rem);
+  }
+  #params-table .ast-table {
+    overflow: overlay;
+  }
+  #params-table .ast-table table {
+    width: max-content;
+    padding: 0 0 1rem 0;
+  }
 }
