--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,3 @@
-
-
 body {
   background: var(--bg-second);
   color: var(--font-primary);
@@ -8,43 +6,67 @@ body {
 
 #home header {
   margin: 1rem 0 2rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 #home header #IconTranslate {
   padding: 0.3rem;
   color: var(--font-second);
+  -webkit-transition: ease 0.2s;
   transition: ease 0.2s;
   border-radius: 0.4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 #home header #IconTranslate:hover {
   background: #4184e426;
   color: var(--link-primary);
 }
+
 #home header #translate-options {
-  display:flex;
-  flex-direction:column;
-  font-size:1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 1rem;
+  -webkit-transition: ease 0.2s;
   transition: ease 0.2s;
 }
+
 #home header #translate-options span {
-  padding:0.4rem 1rem;
+  padding: 0.4rem 1rem;
   border-radius: 0.2rem;
 }
+
 #home header #translate-options span:hover {
   background: #4184e426;
-
 }
-
 
 #home .container {
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: auto 1fr;
+  -ms-grid-rows: auto 1fr;
+      grid-template-rows: auto 1fr;
 }
+
 #home main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 1rem;
   padding: 2rem 0;
 }
@@ -54,12 +76,13 @@ div#url-example {
   font-size: 1.2rem;
   margin: 0 0 1rem 0;
 }
+
 div#url-example span {
   color: #adbac7;
 }
 
 b9cdcfe {
-  color: #9cdcfe
+  color: #9cdcfe;
 }
 
 bg {
@@ -68,20 +91,94 @@ bg {
   padding: 0.1rem 0.2rem;
 }
 
+form.generateurl {
+  padding: 2rem 0;
+}
 
+form.generateurl input {
+  width: 100%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
 
+form.generateurl input.required {
+  -webkit-box-shadow: 0px 0px 0px 2px var(--btn-third-border);
+          box-shadow: 0px 0px 0px 2px var(--btn-third-border);
+}
 
-/*RESPONSIVE*/
+form.generateurl textarea {
+  width: 100%;
+  height: 10rem;
+}
+
+form.generateurl .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.5rem;
+  padding: 1rem 0;
+}
+
+form.generateurl .col {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5rem;
+}
+
+form.generateurl button[type="button"] {
+  -webkit-transition: ease 0.2s;
+  transition: ease 0.2s;
+  background: var(--btn-second);
+  -webkit-box-shadow: 0px 0px 0px 2px var(--border);
+          box-shadow: 0px 0px 0px 2px var(--border);
+  color: #fff;
+}
+
+form.generateurl button[type="button"]:hover {
+  background-color: var(--btn-second-hover);
+  -webkit-box-shadow: 0px 0px 0px 2px var(--btn-second-border-hover);
+          box-shadow: 0px 0px 0px 2px var(--btn-second-border-hover);
+}
+
+form.generateurl button[type="button"]:active {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+}
 
 @media (max-width: 420px) {
-  #params-table  {
+  form.generateurl .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+/*RESPONSIVE*/
+@media (max-width: 420px) {
+  div#url-example {
+    font-size: 1rem;
+  }
+  #params-table {
     width: calc(100vw - 4rem);
   }
   #params-table .ast-table {
     overflow: overlay;
   }
   #params-table .ast-table table {
+    width: -webkit-max-content;
+    width: -moz-max-content;
     width: max-content;
     padding: 0 0 1rem 0;
   }
 }
+/*# sourceMappingURL=style.css.map */
