--- a/getting-starter/src/css/style.css
+++ b/getting-starter/src/css/style.css
@@ -14,6 +14,61 @@ body {
           justify-content: space-between;
 }
 
+#home header .l-side {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#home header .l-side .divider {
+  width: 1.5px;
+  height: 100%;
+  background: var(--border);
+  margin: 0 2rem;
+}
+
+#home header .l-side .menu {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#home header .l-side .menu .to-modal {
+  height: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+
+#home header .l-side .menu .to-modal:hover::after {
+  width: 100%;
+}
+
+#home header .l-side .menu .to-modal::after {
+  content: '';
+  -webkit-transition: ease 0.2s;
+  transition: ease 0.2s;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  height: 2px;
+  background-color: var(--purple);
+  width: 0%;
+  -webkit-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
+}
+
 #home header #IconTranslate {
   padding: 0.3rem;
   color: var(--font-second);
@@ -55,8 +110,8 @@ body {
 #home .container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: auto 1fr;
-      grid-template-rows: auto 1fr;
+  -ms-grid-rows: auto 1fr auto;
+      grid-template-rows: auto 1fr auto;
 }
 
 #home main {
@@ -218,6 +273,26 @@ textarea[data-name="generated-url"] {
 textarea[data-name="generated-url"]:focus {
   -webkit-box-shadow: 0px 0px 0px 2px var(--bg-info-border);
           box-shadow: 0px 0px 0px 2px var(--bg-info-border);
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 2rem;
+  gap: 0.3rem;
+}
+
+footer a {
+  color: var(--link-primary);
+}
+
+footer a:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /*RESPONSIVE*/
