--- a/getting-starter/src/css/style.scss
+++ b/getting-starter/src/css/style.scss
@@ -10,6 +10,46 @@ body {
   margin: 1rem 0 2rem 0;
   display: flex;
   justify-content: space-between;
+
+  & .l-side {
+    display: flex;
+
+    & .divider {
+      width: 1.5px;
+      height: 100%;
+      background: var(--border);
+      margin: 0 2rem;
+    }
+    & .menu {
+      align-items: center;
+      display: flex;
+
+      & .to-modal {
+        height: 100%;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        &:hover {
+          &::after {
+            width: 100%;
+          }
+        }
+        &::after {
+          content: '';
+          transition: ease 0.2s;
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          height: 2px;
+          background-color: var(--purple);
+          width: 0%;
+          transform: translate(-50%, 0%);
+        }
+      }
+    }
+  }
 }
 #home header #IconTranslate {
   padding: 0.3rem;
@@ -40,7 +80,7 @@ body {
 
 #home .container {
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto 1fr auto;
 }
 #home main {
   display: flex;
@@ -152,6 +192,22 @@ textarea[data-name="generated-url"]{
     box-shadow: 0px 0px 0px 2px var(--bg-info-border);
   }
 }
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
+  gap: 0.3rem;
+  a {
+    color: var(--link-primary);
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+}
+
+
 /*RESPONSIVE*/
 
 @media (max-width: 420px) {
