--- a/getting-starter/src/css/style.css
+++ b/getting-starter/src/css/style.css
@@ -210,6 +210,7 @@ form.generateurl .col {
 }
 
 button[type="button"] {
+  cursor: pointer !important;
   -webkit-transition: ease 0.2s;
   transition: ease 0.2s;
   background: var(--btn-second);
@@ -220,6 +221,7 @@ button[type="button"] {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  min-width: 5rem;
 }
 
 button[type="button"]:hover {
@@ -231,6 +233,12 @@ button[type="button"]:hover {
 button[type="button"]:active {
   -webkit-transform: scale(0.95);
           transform: scale(0.95);
+}
+
+button[type="button"].info {
+  background: var(--bg-info);
+  -webkit-box-shadow: 0px 0px 0px 2px var(--bg-info-border);
+          box-shadow: 0px 0px 0px 2px var(--bg-info-border);
 }
 
 #result {
@@ -276,14 +284,12 @@ textarea[data-name="generated-url"]:focus {
 }
 
 footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding: 2rem;
+  padding: 2rem 0;
   gap: 0.3rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
 }
 
 footer a {
@@ -293,6 +299,59 @@ footer a {
 footer a:hover {
   text-decoration: underline;
   cursor: pointer;
+}
+
+footer .center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 0.3rem;
+}
+
+footer .l-side {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+footer .l-side .ssl-seal, footer .l-side span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.5rem;
+  font-size: 0.9rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer .l-side .ssl-seal i, footer .l-side span i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer .l-side span {
+  background-color: var(--bg-third);
+  border-radius: 0.3rem;
+  padding: 0.3rem 0.6rem;
+  gap: 0.2rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 /*RESPONSIVE*/
@@ -311,6 +370,27 @@ footer a:hover {
     width: -moz-max-content;
     width: max-content;
     padding: 0 0 1rem 0;
+  }
+  footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-grid-columns: inherit;
+        grid-template-columns: inherit;
+    padding-bottom: 1rem;
+  }
+  footer .l-side {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 1rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
