--- a/getting-starter/src/css/modal.css
+++ b/getting-starter/src/css/modal.css
@@ -31,8 +31,8 @@
   position: relative;
   width: 100%;
   height: 100%;
-  max-width: 70%;
-  max-height: 60%;
+  max-width: 50%;
+  max-height: 50%;
   background: var(  --bg-third);
   
   border-radius: 1rem;
@@ -46,6 +46,10 @@
   padding: 2.5rem 2rem;
   text-align: left;
   overflow: overlay;
+  font-size: 1.2rem;
+}
+#easyModal .modal .content :is(p, h1) {
+  margin-bottom: 1rem;
 }
 #easyModal .modal .close {
   position: absolute;
