--- a/getting-starter/src/css/style.scss
+++ b/getting-starter/src/css/style.scss
@@ -181,6 +181,7 @@ button[type="button"]{
 
 #result {
   display: none;
+  position: relative;
   &.show {
     display: flex;
     flex-direction: column;
