--- a/getting-starter/src/css/style.scss
+++ b/getting-starter/src/css/style.scss
@@ -23,7 +23,7 @@ body {
     & .menu {
       align-items: center;
       display: flex;
-
+      gap: 2rem;
       & .to-modal {
         height: 100%;
         position: relative;
@@ -73,11 +73,18 @@ body {
   font-size:1rem;
   transition: ease 0.2s;
 }
-#home header #translate-options span {
+#home header #translate-options :is(span, a) {
   padding:0.4rem 1rem;
   border-radius: 0.2rem;
+
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  & i {
+    display: flex;
+  }
 }
-#home header #translate-options span:hover {
+#home header #translate-options :is(span, a):hover {
   background: #4184e426;
 
 }
@@ -125,7 +132,7 @@ form.generateurl {
   }
   & textarea {
     width: 100%;
-    height: 10rem;
+    height: 100%;
   }
   & input, textarea {
     background: var(--bg-third);
@@ -133,6 +140,7 @@ form.generateurl {
     &:focus {
       box-shadow: 0px 0px 0px 2px var(--pink);
     }
+
   }
   & .row {
     display: flex;
@@ -144,6 +152,9 @@ form.generateurl {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    & .row {
+      padding:0;
+    }
   }
 
 
