--- a/getting-starter/src/css/style.scss
+++ b/getting-starter/src/css/style.scss
@@ -157,6 +157,16 @@ form.generateurl {
     }
   }
 
+  & .input-error {
+
+    font-size: 0.9rem;
+    color: var(--cyan);
+
+    & span {
+      padding-top: 0.4rem;
+      display: flex;
+    }
+  }
 
 
 
@@ -168,7 +178,7 @@ form.generateurl {
   }
 }
 
-button[type="button"]{
+button[type="button"], button[type="submit"]{
   cursor: pointer !important;
   transition: ease 0.2s;
   background: var(--btn-second);
@@ -214,6 +224,9 @@ textarea[data-name="generated-url"]{
 
   &:focus {
     box-shadow: 0px 0px 0px 2px var(--bg-info-border);
+  }
+  @media (max-width: 420px) {
+    min-height: 10rem;
   }
 }
 
