--- a/getting-starter/src/css/style.scss
+++ b/getting-starter/src/css/style.scss
@@ -160,7 +160,7 @@ form.generateurl {
   & .input-error {
 
     font-size: 0.9rem;
-    color: var(--cyan);
+    color: var(--font-third);
 
     & span {
       padding-top: 0.4rem;
