--- a/getting-starter/src/css/style.css
+++ b/getting-starter/src/css/style.css
@@ -189,6 +189,7 @@ form.generateurl input.required {
 form.generateurl textarea {
   width: 100%;
   height: 100%;
+  min-height: 6rem;
 }
 
 form.generateurl input, form.generateurl textarea {
