--- a/getting-starter/src/css/style.scss
+++ b/getting-starter/src/css/style.scss
@@ -133,6 +133,7 @@ form.generateurl {
   & textarea {
     width: 100%;
     height: 100%;
+    min-height: 6rem;
   }
   & input, textarea {
     background: var(--bg-third);
